--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <input placeholder="Введите название страны!" type="text" id="search-box" />
     <ul class="country-list"></ul>
+
     <div class="country-info"></div>
 
     <script src="index.js" type="module"></script>
